fix date and image

--- a/_workshops/25_10_tdd.md
+++ b/_workshops/25_10_tdd.md
@@ -4,7 +4,7 @@ shortTitle: Swift TDD Workshop
 presenter: Pawel Dudek of mobile-academy.io
 image: swift-tdd.jpg
 anchor: tdd
-date: Wednesday, May 25th
+date: "Wednesday, May 25th"
 time: 10 am
 duration: ca. 3h
 fee: 50 €
